Loggin 적용하면서 dev profile로 시작되도록 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  profiles:
+    active: dev
   config:
     import:
       - application-local.yml
@@ -14,3 +16,4 @@ spring:
         show_sql: 'true'
     hibernate:
       ddl-auto: update
+
